fixing spacing test

--- a/assets/css/accessibility.css
+++ b/assets/css/accessibility.css
@@ -80,3 +80,10 @@ body {
     margin-top: 70px;
   }
 }
+
+.software-title {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.3;
+  cursor: pointer;
+}
